# enterprises-data-rag

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: ingest.py
src/rag_agent/api/: app.py  dependencies.py
src/rag_agent/api/routes/: analytics.py  auth.py  documents.py  query.py
src/rag_agent/chain/: rag_chain.py
src/rag_agent/core/: config.py  logging.py  security.py
src/rag_agent/db/: database.py  models.py  repository.py
src/rag_agent/embeddings/: embedder.py
src/rag_agent/generation/: llm.py  prompts.py
src/rag_agent/ingestion/: chunker.py  pipeline.py
src/rag_agent/ingestion/loaders/: csv_loader.py  pdf_loader.py  text_loader.py
src/rag_agent/retrieval/: retriever.py
src/rag_agent/schemas/: document.py  query.py
src/rag_agent/vectorstore/: chroma_store.py
web/: next.config.ts
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx
web/src/app/(auth)/: layout.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/signup/: page.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/app/(dashboard)/analytics/: page.tsx
web/src/app/(dashboard)/chat/: page.tsx
web/src/app/(dashboard)/documents/: page.tsx
web/src/components/: Sidebar.tsx
web/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  SourcesPanel.tsx  ThinkingSteps.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/ui/: Badge.tsx  ErrorBanner.tsx  PageHeader.tsx  Skeleton.tsx
web/src/hooks/: useAnalytics.ts  useChat.ts  useDocuments.ts
web/src/lib/: api.ts  auth.ts  utils.ts
web/src/lib/api/: analytics.ts  auth.ts  client.ts  documents.ts  query.ts
web/src/types/: index.ts
