[project]
name = "rag-agent"
version = "0.1.0"
description = "Enterprise data intelligence RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.6.0",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]
