[project]
name = "rag-agent"
version = "0.1.0"
description = "Enterprise data intelligence RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # LangChain core + integrations
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-text-splitters>=0.3.0",

    # Vector store
    "chromadb>=0.6.0",

    # BM25 keyword search (hybrid retrieval)
    "rank-bm25>=0.2.2",

    # Cohere reranking
    "cohere>=5.0.0",

    # Database
    "sqlalchemy>=2.0.36",

    # Config + environment
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Document loaders
    "pypdf>=5.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]
